# water-flow

./: README.md  pyproject.toml
src/water_flow/cli/: main.py
src/water_flow/storage/: settings_store.py  water_log_store.py
tests/: run_unit_checks.py  test_settings_store.py
